создал объект данных обьявления

--- a/markup/index.html
+++ b/markup/index.html
@@ -479,5 +479,9 @@
         </div>
     </template>
 
+
+    <script src="../src/enum.js"></script>
+    <script src="../src/data.js"></script>
+    <script src="../src/main.js"></script>
 </body>
 </html>
