--- a/markup/index.html
+++ b/markup/index.html
@@ -479,7 +479,8 @@
         </div>
     </template>
 
-
+    <script src="../src/arre.js"></script>
+    <script src="../src/util.js"></script>
     <script src="../src/enum.js"></script>
     <script src="../src/data.js"></script>
     <script src="../src/main.js"></script>
