--- a/public/index.html
+++ b/public/index.html
@@ -478,5 +478,7 @@
             <button type="button" class="error__button">Попробовать снова</button>
         </div>
     </template>
+
+    <script src="./bundle.js"></script>
 </body>
 </html>
