--- a/public/playground.html
+++ b/public/playground.html
@@ -24,12 +24,12 @@
             <p class="popup__text popup__text--capacity">2 комнаты для 3 гостей</p>
             <p class="popup__text popup__text--time">Заезд после 14:00, выезд до 10:00</p>
             <ul class="popup__features">
-                <li class="popup__feature popup__feature--wifi"></li>
-                <li class="popup__feature popup__feature--dishwasher"></li>
-                <li class="popup__feature popup__feature--parking"></li>
-                <li class="popup__feature popup__feature--washer"></li>
-                <li class="popup__feature popup__feature--elevator"></li>
-                <li class="popup__feature popup__feature--conditioner"></li>
+                <li class="popup__feature popup__feature--wifi">wifi</li>
+                <li class="popup__feature popup__feature--dishwasher">dishwasher</li>
+                <li class="popup__feature popup__feature--parking">parking</li>
+                <li class="popup__feature popup__feature--washer">washer</li>
+                <li class="popup__feature popup__feature--elevator">elevator</li>
+                <li class="popup__feature popup__feature--conditioner">conditioner</li>
             </ul>
             <p class="popup__description">Великолепная квартира-студия в центре Токио. Подходит как туристам, так и бизнесменам. Квартира полностью укомплектована и недавно отремонтирована.</p>
             <div class="popup__photos">
@@ -47,3 +47,5 @@
     <script src="./bundle.js"></script>
 </body>
 </html>
+
+
