--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Exhange | Digital-agency «Webdot»</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./leaflet/leaflet.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- подключение шрифтов -->
@@ -479,6 +480,7 @@
         </div>
     </template>
 
+    <script src="./leaflet/leaflet.js"></script>
     <script src="./bundle.js"></script>
 </body>
 </html>
