--- a/old/modal.html
+++ b/old/modal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="../css/modal.css">
+    <link rel="stylesheet" href="../public/css/modal.css">
 </head>
 <body>
 
@@ -16,6 +16,6 @@
         </div>
     </div>
 
-    <script src="../bundle.js"></script>
+    <script src="../public/bundle.js"></script>
 </body>
 </html>
