--- a/old/playground.html
+++ b/old/playground.html
@@ -12,7 +12,7 @@
         <article class="popup" style="margin-top: 50px; background-color: silver">
             <img
                 class="popup__avatar"
-                src="../../markup/img/avatars/user01.png"
+                src="../markup/img/avatars/user01.png"
                 width="70"
                 height="70"
                 alt="Аватар пользователя"
@@ -44,7 +44,7 @@
         </article>
     </template>
 
-    <script src="../bundle.js"></script>
+    <script src="../public/bundle.js"></script>
 </body>
 </html>
 
